# KB2

./: .gitignore  README.md  SKILLS.md  bot.pem  bunfig.toml  functions.py  main.py  package.json  pyproject.toml  tsconfig.json
.opencode/skills/kalshi-adjacent-risk/: SKILL.md
.opencode/skills/kb2-tools/: SKILL.md
grafana-dashboard/: readme.md
kalshi-toolchain/: readme.md
src/cli/: index.ts  kalshi.ts  perplexity.ts  risk.ts  shared.ts
src/dashboard/: app.js  data.ts  index.html  server.ts  styles.css
src/db/: index.ts
src/kalshi/: index.ts
src/perplexity/: index.ts
src/risk/: index.ts
