[project]
name = "kb2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=48.0.0",
    "dotenv>=0.9.9",
    "kalshi-python>=2.1.4",
    "kalshi-python-async>=3.18.0",
    "openai>=2.38.0",
    "perplexityai>=0.34.0",
]
